--- a/frontend/src/views/MainSection/components/About/About.scss
+++ b/frontend/src/views/MainSection/components/About/About.scss
@@ -50,7 +50,7 @@
           color: var(--text-black-900);
           border-bottom: 1px solid var(--bg-black-50);
 
-          span {
+          span, a {
             font-weight: 400;
             color: var(--text-black-700);
             font-size: 14px;
