--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,12 @@
 .main-section{
-    padding-left: 270px;
+    padding-top: 85px;
     
     
 }
 
-@media screen and (max-width:1199px) {
+@media screen and (max-width:650px) {
     .main-section{
-        padding-left: 0;
+        padding-top: 0;
     }       
 }
 
