--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,15 @@
     --skin-color: #ec1839;
 }
 
+body.dark{
+    --bg-black-900: #151515;
+    --bg-black-100: #222;
+    --bg-black-50: #393939;
+    --text-black-900: #fff;
+    --text-black-700: #e9e9e9;
+    --skin-color: #E9B64F;
+}
+
 * {
     margin: 0;
     padding: 0;
