--- a/frontend/src/views/MainSection/components/Portfolio/Portfolio.scss
+++ b/frontend/src/views/MainSection/components/Portfolio/Portfolio.scss
@@ -31,6 +31,82 @@
           display: block;
         }
       }
+
+      .portfolio-info{
+        margin-top: 20px;
+        padding: 10px;
+
+        .portfolio-title{
+          font-size: 20px;
+          color: var(--text-black-900);
+          margin-bottom: 10px;
+        }
+
+        .portfolio-desc{
+          color: var(--text-black-700);
+          text-align: justify;
+        }
+      }
+
+      .portfolio-tech{
+        display: flex;
+        justify-content: center;
+        background-color: #EBEBEB;
+        // max-width: 80%;
+        padding-bottom: 10px;
+        border-radius: 10px;
+        margin: auto;
+        flex-wrap: wrap;
+        margin-left: 10px;
+        margin-right: 10px;
+
+        li{
+          margin-top: 10px;
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          border: 1px solid #ccc;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          overflow: hidden;
+          margin-left: 20px;
+          max-width: calc(100%/6);
+
+          img{
+            width: 70%;
+          }
+
+          &:first-child{
+            margin-left: 0;
+          }
+        }
+      }
+
+      .portfolio-actions{
+        margin: 20px 0 10px;
+        a{
+          color: var(--skin-color);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          max-width: 60%;
+          padding: 8px 10px;
+          border: 1px solid var(--skin-color);
+          border-radius: 10px;
+          margin: auto;
+          transition: all .3s ease;
+
+          svg{
+            margin-right: 6px;
+          }
+
+          &:hover{
+            background-color: var(--skin-color);
+            color: #fff;
+          }
+        }
+      }
     }
 
     @media screen and (max-width: 991px) {
