--- a/frontend/src/views/Sidebar/Sidebar.scss
+++ b/frontend/src/views/Sidebar/Sidebar.scss
@@ -134,9 +134,24 @@
         }
     }
 
-    @media screen and (max-width: 850px) {
+    .toggle-theme{
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        border: 1px solid #ccc;
+        display: flex;
         justify-content: center;
-        // height: 70px;
+        align-items: center;
+        font-size: 18px;
+        cursor: pointer;
+
+        svg{
+            color: var(--text-black-900);
+        }
+
+        @media screen and (max-width: 650px) {
+           margin-top: 20px;
+        }
     }
 
     @media screen and (max-width: 650px) {
